[package]
name = "computes-vm"
version = "0.1.0"
authors = ["feldim2425"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.8.0"
jni = "0.18.0"
walrus = "0.18.0"
wasmer = "1.0.1"
wasmer-compiler-singlepass = "1.0.1"
wasmer-engine-jit = "1.0.1"
wasmer-middlewares = "1.0.1"
wasmer-runtime = "0.17.1"
wasmer-types = "1.0.1"
wasmer-vm = "1.0.1"
